# gwm

./: .gitignore  .lintstagedrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  README_JA.md  eslint.config.js  package.json  pnpm-lock.yaml  python-venv-fix-summary.md  rust-toolchain.toml  test-err.txt  tsconfig.json  tsconfig.test.json
.claude/: settings.local.json
.gwm/: config.toml
docs/: clean_remove_spec.md  copy-ignored-files-spec.md  fix-branch-cleanup.md  help-command-spec.md  hooks-spec.md  shell-completion-spec.md  specification.md  todo.md
gwm/: config.toml
gwm-rust/: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  README_JA.md
gwm-rust/.claude/: settings.json
gwm-rust/.claude/skills/verify-gwm/: SKILL.md
gwm-rust/src/: error.rs  lib.rs  main.rs
gwm-rust/src/cli/: args.rs  mod.rs
gwm-rust/src/config/: loader.rs  merger.rs  mod.rs  types.rs
gwm-rust/src/git/: add.rs  clean.rs  core.rs  mod.rs  pull.rs  remote.rs  remove.rs  types.rs  worktree.rs
gwm-rust/src/hooks/: deferred.rs  mod.rs  runner.rs  types.rs
gwm-rust/src/shell/: completion.rs  exec.rs  init.rs  mod.rs
gwm-rust/src/trust/: cache.rs  hash.rs  mod.rs  types.rs  verifier.rs
gwm-rust/src/ui/: app.rs  colors.rs  error.rs  event.rs  mod.rs  summary.rs
gwm-rust/src/ui/views/: add.rs  clean.rs  go.rs  help.rs  list.rs  mod.rs  remove.rs
gwm-rust/src/ui/widgets/: confirm.rs  mod.rs  multi_select_list.rs  notice.rs  progress.rs  select_list.rs  spinner.rs  table.rs  text_input.rs
gwm-rust/src/utils/: copy.rs  editor.rs  formatting.rs  mod.rs  validation.rs  virtualenv.rs
gwm-ts/: .gitignore  package.json  vitest.config.ts
homebrew/: README.md
scripts/: generate-completions.js  prepublish.js  update-homebrew-sha.ts
src/: config.ts  index.tsx
test/: add.test.ts  base-path-token.test.ts  clean.test.ts  cli.test.ts  code.test.ts  config-hooks.test.ts  config.test.ts  create.test.ts  cwd-file.test.ts  editor.test.ts  error-handling.test.ts  formatting.test.ts  git-extended.test.ts  git-remote-branches.test.ts  git.branch-utils.test.ts  git.test.ts  go.test.ts  hooks-runner.test.ts  interactive-ui.test.ts  keyboard.test.ts  list.test.ts  multi-select-list.test.ts  nonfunctional.copyFiles.test.ts  path-utils.test.ts  scroll-selection.test.ts  security-shell-escape.test.ts  select-all-shortcut.test.ts  shell.test.ts  text-input.test.ts  trust-cache.test.ts  trust-verifier.test.ts  use-editable-text.test.ts  use-worktree-copy-files.test.ts  use-worktree-options.test.ts  use-worktree-options.test.tsx  use-worktree-virtualenv.test.ts  virtualenv.test.ts  (+9 more)
(+186 files in other folders)
