[package]
name = "gwm"
version = "0.1.0"
edition = "2021"
authors = ["shutootaki"]
description = "Git Worktree Manager - A CLI tool for managing Git worktrees"
license = "MIT"
repository = "https://github.com/shutootaki/gwm"
keywords = ["git", "worktree", "cli", "terminal", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gwm"
path = "src/main.rs"

[dependencies]
# CLI argument parser
clap = { version = "4.5", features = ["derive"] }

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Hashing (for trust feature)
sha2 = "0.10"
hex = "0.4"

# Home directory
dirs = "6.0"

# Date/time
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.0"
predicates = "3"

[profile.release]
lto = true
strip = true
